--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.5.3",
+    "prettier": "^3.6.2",
+    "prettier-plugin-tailwindcss": "^0.6.14",
     "slice-machine-ui": "^2.18.2",
     "tailwindcss": "^4",
     "typescript": "^5"
