--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
     "stripe": "^20.0.0",
+    "tailwind-merge": "^3.4.0",
     "three": "^0.180.0"
   },
   "devDependencies": {
